--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "stripe/stripe-php": "^7.116",
       "ext-pdo": "*",
       "ext-gd": "*",
-      "ext-exif": "*"
+      "ext-exif": "*",
+        "spipu/html2pdf": "^5.2"
     }
 }
